add_subdirectory(common_native)
add_subdirectory(AntiAlias)
add_subdirectory(AstcTextures)
add_subdirectory(ComputeParticles)
add_subdirectory(Cube)
add_subdirectory(EGLPreserve)
add_subdirectory(ETCAtlasAlpha)
add_subdirectory(ETCCompressedAlpha)
add_subdirectory(ETCMipmap)
add_subdirectory(ETCUncompressedAlpha)
add_subdirectory(FFTOceanWater)
add_subdirectory(FrameBufferObject)
add_subdirectory(ListEGLConfigs)
add_subdirectory(Metaballs)
add_subdirectory(MultisampledFBO)
add_subdirectory(OcclusionCulling)
add_subdirectory(ProceduralGeometry)
add_subdirectory(RotoZoom)
add_subdirectory(Skybox)
add_subdirectory(Template)
add_subdirectory(Tessellation)
add_subdirectory(ThreadSync)
add_subdirectory(Translucency)
add_subdirectory(Triangle)

