add_subdirectory(AssetLoading)
add_subdirectory(Boids)
add_subdirectory(FileLoading)
add_subdirectory(FoveatedRendering)
add_subdirectory(GraphicsSetup)
add_subdirectory(Instancing)
add_subdirectory(Lighting)
add_subdirectory(Mipmapping)
add_subdirectory(NormalMapping)
add_subdirectory(ProjectedLights)
add_subdirectory(SimpleCube)
add_subdirectory(TextureCube)
add_subdirectory(Bloom)
add_subdirectory(EtcTexture)
add_subdirectory(FirstNative)
add_subdirectory(InstancedTessellation)
add_subdirectory(IntegerLogic)
add_subdirectory(MinMaxBlending)
add_subdirectory(Multiview)
add_subdirectory(OcclusionQueries)
add_subdirectory(ShadowMapping)
add_subdirectory(SimpleTriangle)
add_subdirectory(Vbo)
